--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install zsh
-        run: sudo apt-get update && sudo apt-get install -y zsh
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y zsh fzf tmux
 
-      - name: Run tests
+      - name: Run unit tests
         run: zsh tests/test_zsh_snip.zsh
+
+      - name: Run integration tests
+        run: zsh tests/test_integration.zsh
+
+      - name: Run E2E tests
+        run: zsh tests/test_e2e.zsh
